# Triangle

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
ressources/: ressources.qrc
src/: main.cpp  triangle.cpp  triangle.h
ui/: main.qml
